# agentic-core-system

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  instructions.md  opencode.json  pyproject.toml
.agents/: README.md  project.json
.agents/mcp/: servers.json
.agents/skills/core-orchestrator/: SKILL.md
.agents/skills/workflow-explore/: SKILL.md
.agents/skills/workflow-implement/: SKILL.md
.agents/skills/workflow-plan/: SKILL.md
.agents/skills/workflow-review/: SKILL.md
.antigravity/: AGENTS.md  README.md  settings.json
.claude/: settings.json
.codex/: config.example.toml  config.toml
.codex/agents/: explorer.toml  implementer.toml  planner.toml  reviewer.toml
.codex/rules/: git-approval.rules
.kiro/agents/: agentic-core-system-maintainer.json
.kiro/steering/: agent-context.md  instructions.md  mcp-and-permissions.md
agentkit/: __init__.py  agents.py  cli.py  generate_adapters.py  init.py  presets.py  validate.py
agentkit/presets/preset-angular/: commands.json  (+3 more)
agentkit/schemas/: manifest.schema.json  project.schema.json
agentkit/templates/: AGENTS.base.md  agentkit.yaml  env.mcp.example  permissions.json  project.json  provider-overrides.json
docs/: README.md  authoring.md  concepts.md  development.md  roadmap.md  upgrade.md  usage.md
docs/product/: prd.md
npm/: README.md  package.json
scripts/: check_adapters.sh  probe.sh  probe_write.sh
tests/: test_agents.py  test_cli.py  test_dogfood_sync.py  test_engine.py  test_init_integration.py  test_presets.py  test_upgrade.py  test_validate.py
(+37 files in other folders)
