[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkit-core"
version = "0.1.0"
description = "Provider-agnostic agent context kit: a canonical .agents source generates per-provider adapters, with init/validate/upgrade and a layered Core/Preset/Manifest model."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sugeng Eko Saputro" }]
keywords = ["agent", "ai", "cli", "kiro", "claude", "codex", "opencode", "mcp"]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
agentkit = "agentkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentkit"]

[tool.hatch.build.targets.wheel.force-include]
"agentkit/templates" = "agentkit/templates"
